# namemark

./: .gitignore  CMakeLists.txt  Makefile  Namemark 游戏配置文件编辑指南.docx  README.md  act.cpp  act.h  build.bat  console.cpp  console.h  customio.cpp  customio.h  customio23.cpp  customio23.h  damage_calculator.cpp  damage_calculator.h  entity.cpp  entity.h  file_utils.cpp  file_utils.h  game.cpp  game.h  generic_skill.cpp  generic_skill.h  level_data.cpp  level_data.h  levels.json  monster_preset.cpp  monster_preset.h  monsters.json  namemark_version1.4.cpp  namemark_version1.4.slnx  namemark_version1.4.vcxproj  namemark_version1.4.vcxproj.filters  package_manager.cpp  package_manager.h  resource.h  resource2.h  selection_list.cpp  selection_list.h  (+9 more)
.github/workflows/: build.yml
config/: class1.json
config/skills/: acts.json
resources/: resource.h  resource3.h
resourses/default/: levels.json  monsters.json
resourses/shenmi/: levels.json
src/: act.cpp  cli.cpp  cli.h  console.cpp  console.h  customio.cpp  customio.h  game.cpp  game.h  generic_skill.cpp  generic_skill.h  level_data.cpp  main.cpp  monster_preset.cpp  monster_preset.h  selection_list.cpp  selection_list.h  weapon_loader.cpp
src/states/: adventure_state.cpp  gacha_state.cpp  setting_state.cpp  team_state.cpp  teamtest_state.cpp
states/: adventure_state.cpp  adventure_state.h  gacha_state.cpp  gacha_state.h  lobby_state.cpp  lobby_state.h  setting_state.h  shop_state.cpp  shop_state.h  team_state.cpp  team_state.h  teamtest_state.cpp  teamtest_state.h
